tests/baselines/reference/genericRecursiveImplicitConstructorErrors1.errors.txt
tests/cases/compiler/genericRecursiveImplicitConstructorErrors1.ts(9,49): error TS2314: Generic type 'PullTypeSymbol<A, B, C>' requires 3 type argument(s).


==== tests/cases/compiler/genericRecursiveImplicitConstructorErrors1.ts (1 errors) ====
    export declare module TypeScript {
      class PullSymbol { }
      class PullSignatureSymbol <A,B,C> extends PullSymbol {
      public addSpecialization<A,B,C>(signature: PullSignatureSymbol<A,B,C>, typeArguments: PullTypeSymbol<any,any,any>[]): void;
      }
      class PullTypeSymbol <A,B,C> extends PullSymbol {
        public findTypeParameter<A,B,C>(name: string): PullTypeParameterSymbol<A,B,C>;
      }
      class PullTypeParameterSymbol <A,B,C> extends PullTypeSymbol {
                                                    ~~~~~~~~~~~~~~
!!! error TS2314: Generic type 'PullTypeSymbol<A, B, C>' requires 3 type argument(s).
      }
    }
     
    